# bticino_intercom

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES_v2.0.0.md  TODO.md  docker-compose.dev.yml  hacs.json  patch.py  pyproject.toml
.github/workflows/: ci.yaml  hacs.yaml  release.yaml
blueprints/automation/: bticino_incoming_call.yaml  doorbell_actionable_notification.yaml  doorbell_auto_open.yaml  doorbell_notification.yaml  doorbell_snapshot_to_service.yaml  missed_call_log.yaml
custom_components/bticino_intercom/: __init__.py  binary_sensor.py  camera.py  config_flow.py  const.py  coordinator.py  coordinator.py.orig  coordinator.py.patch  coordinator.py.rej  diagnostics.py  entity.py  event.py  history.py  light.py  lock.py  manifest.json  media_source.py  number.py  quality_scale.yaml  sensor.py  services.yaml  strings.json  switch.py  utils.py
custom_components/bticino_intercom/translations/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  nl.json  pl.json  pt.json  ro.json  ru.json  zh.json
docs/: architecture-webrtc-v2.md  firefox-webrtc-investigation.md
docs/superpowers/plans/: 2026-04-01-webrtc-v2-implementation.md  2026-04-17-multi-camera-per-unit.md  2026-04-17-webrtc-answer-incoming-call.md  2026-04-18-webrtc-audio-ssrc-fix.md  2026-04-20-answer-mode.md  2026-04-20-idle-redesign.md  2026-05-26-v2.0.0-release.md  2026-06-01-iss57-main-entrance-test-script.md
scripts/dev/: ISS57_README.md  ISS57_VDE_README.md  ISS57_issue_reply.md  ISS57_test_main_entrance_open.py  ISS57_test_vde_unlock.py
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_camera.py  test_config_flow.py  test_coordinator.py  test_eos.py  test_event.py  test_history.py  test_history_integration.py  test_init.py  test_integration.py  test_light.py  test_lock.py  test_media_source.py  test_sensor.py  test_token_persistence.py  test_utils.py  test_webrtc_camera.py
(+4 files in other folders)
