[project]
name = "bticino_intercom"
version = "1.7.3"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade (modernize syntax)
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "T20",    # flake8-print (no print statements)
    "G",      # flake8-logging-format (lazy logging)
    "LOG",    # flake8-logging
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (formatter handles it)
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.bticino_intercom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
